--- a/App/src/main/res/layout/lrecycleview_layout.xml
+++ b/App/src/main/res/layout/lrecycleview_layout.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_staff_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/wirte"
     android:orientation="vertical">
 
     <include layout="@layout/title_bar_child" />
@@ -21,6 +22,7 @@
         android:id="@+id/list_recycleview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:background="@color/wirte"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <include
